2008-05-06  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Extensions/Banshee.PlayQueue/Banshee.PlayQueue/PlayQueueSource.cs:
	Fix bug with play queue getting recreated each time.  Ugh.

2008-05-06  Aaron Bockover  <abock@gnome.org>

	* src/Extensions/Banshee.Daap/Banshee.Daap/DaapSource.cs:
	* src/Extensions/Banshee.Podcasting/Banshee.Podcasting/PodcastCore.cs:
	Build fixes

2008-05-06  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Extensions/Banshee.NotificationArea/Banshee.NotificationArea/NotificationAreaService.cs:
	* src/Extensions/Banshee.NotificationArea/Resources/NotificationAreaMenu.xml:
	* src/Core/Banshee.ThickClient/Resources/core-ui-actions-layout.xml: Put
	the Next action above the Previous action.

2008-05-06  Aaron Bockover  <abock@gnome.org>

	* src/Dap/Banshee.Dap.Ipod/Banshee.Dap.Ipod/IpodSource.cs: Make the
	progress notification for iPod syncing much better

2008-05-06  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Dap/Banshee.Dap.MassStorage/Banshee.Dap.MassStorage/MassStorageSource.cs:
	Parse the .is_audio_player file, except not setting the output formats
	yet.  Install some dap properties.

	* src/Dap/Banshee.Dap/Banshee.Dap/DapSource.cs: Add DapProperties property
	that the Dap dialog shows.

	* src/Dap/Banshee.Dap/Banshee.Dap.Gui/DapPropertiesDialog.cs: Show the
	DapProperties.

	* src/Backends/Banshee.Hal/Banshee.HalBackend/Device.cs: Cache the uuid.

	* src/Backends/Banshee.Hal/Banshee.HalBackend/Volume.cs: Catch property
	exception for volume that was suddenly removed.

2008-05-06  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Dap/Banshee.Dap/Banshee.Dap/DapSource.cs: Fix a bug where we
	attempted to transcode video files.  We don't support that yet.

2008-05-06  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Dap/Banshee.Dap.MassStorage/Banshee.Dap.MassStorage/MassStorageSource.cs:
	Fix bug just introduced with mass storage support via .is_a_p files.

	* src/Dap/Banshee.Dap/Banshee.Dap/DapSource.cs: Get rid of silly non-DAP