@@ -1,6 +1,7 @@
 ASSEMBLY = Banshee.Dap.Ipod
 TARGET = library
 LINK = $(REF_DAP_IPOD)
+INSTALL_DIR = $(EXTENSIONS_INSTALL_DIR)
 
 SOURCES =  \
 	Banshee.Dap.Ipod/IpodSource.cs \
@@ -14,6 +15,17 @@ EXTRA_BUNDLE = $(IPODSHARP_ASSEMBLIES)
 
 if ENABLE_IPOD
 include $(top_srcdir)/build/build.mk
+
+install-data-hook:
+	for ASM in $(IPODSHARP_ASSEMBLIES); do \
+		$(INSTALL) -m 0755 $$ASM $(DESTDIR)$(moduledir); \
+	done;
+
+uninstall-hook:
+	for ASM in $(IPODSHARP_ASSEMBLIES); do \
+		rm -f $(DESTDIR)$(moduledir)/`basename $$ASM`; \
+	done;
+
 else
 EXTRA_DIST = $(SOURCES) $(RESOURCES)
 endif
