@@ -1,6 +1,7 @@
 ASSEMBLY = Banshee.MiniMode
 TARGET = library
 LINK = $(REF_EXTENSION_MINIMODE)
+INSTALL_DIR = $(EXTENSIONS_INSTALL_DIR)
 
 SOURCES =  \
 	Banshee.MiniMode/MiniModeService.cs \
