@@ -1,3 +1,14 @@
+2008-05-06  Aaron Bockover  <abock@gnome.org>
+
+	Banshee 1.0 Beta 1 (0.99.1) Released
+
+2008-05-06  Aaron Bockover  <abock@gnome.org>
+
+	* configure.ac:
+	* src/Dap/Banshee.Dap.Ipod/Makefile.am:
+	* src/Extensions/Banshee.BooScript/Makefile.am:
+	* src/Extensions/Banshee.MiniMode/Makefile.am: Fixed last build issues
+
 2008-05-06  Gabriel Burt  <gabriel.burt@gmail.com>
 
 	* src/Extensions/Banshee.PlayQueue/Banshee.PlayQueue/PlayQueueSource.cs:
